crates/envoy-config/fuzz/corpus/parse_bootstrap/cluster_maglev_lb.yaml
node:
  id: fuzz-maglev
  cluster: fuzz
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
    - name: http1_listener
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: HTTP1
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: maglev_vh
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: maglev_cluster
                            hash_policy:
                              - header:
                                  header_name: "x-hash-key"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: maglev_cluster
      type: STATIC
      lb_policy: MAGLEV
      maglev_lb_config:
        table_size: 65537
      load_assignment:
        cluster_name: maglev_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 172.22.0.2
                      port_value: 5678
              - endpoint:
                  address:
                    socket_address:
                      address: 172.22.0.3
                      port_value: 5678
